- Prof Pic change - Solved collapsable buttons - Updated contact me button - Added contact page -

--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ bottom: 0.5vh;
 left: 0.5vw;
 z-index: 1000; /* Ensure it stays on top */
 border-radius: 60%; /* Make the button round */
-padding: 1vh 1vw; /* Add padding for size */
+padding: 1vh 1vw; /* Add padding for size */;
 font-size: 1vw; /* Increase the icon size */
 box-shadow: 0.5vw 0.5vh;
 background-color: #fff;
@@ -98,5 +98,6 @@ border-width: 0.5vw;
     img {
         width: auto;
         height: 4vh;
+        padding-left: -0.1vw;
     }
 }
